--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						 <nav class="top-nav">
 							<ul class="top-nav">
 								<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
-								<li><a href="#work" class="scroll">Work</a></li>
+								<li><a href="#work" class="scroll">Gallery</a></li>
 								<li><a href="#contact" class="scroll">Contact</a></li>
 							</ul>
 							<a href="#" id="pull"><img src="images/nav.jpg" title="menu" /></a>
@@ -77,8 +77,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!----top-header-info--->
 						<div class="top-header-info">
 							<p>
-								Hello,<br>
-								I'm Dr.Syed Aboobacker Sidhique.<br>
+								
+								Dr.Syed Aboobacker Sidhique.<br>
 								Veterinary Surgeon<br>
 								(BVSc&AH)
 	
@@ -118,7 +118,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!---- WORKS ---->
 			<div id="work" class="works">
 				<div class="container">
-					<h2>MY<br/>WORKS</h2>
+					<h2>Gallery</h2>
 					<span> </span>
 				</div>
 				<!---- partners ---->
