--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!----start-top-nav---->
 						 <nav class="top-nav">
 							<ul class="top-nav">
-								<li class="active"><a href="#home" class="scroll" style="color:black;">About</a><span> </span></li>
-								<li><a href="#work" class="scroll"style="color:black;" >Gallery</a></li>
-								<li><a href="#contact" class="scroll"style="color:black;" >Contact</a></li>
+								<li class="active"><a href="#home" class="scroll" style="color:black;"><b>About</b></a><span> </span></li>
+								<li><a href="#work" class="scroll"style="color:black;"><b>Gallery</b></a></li>
+								<li><a href="#contact" class="scroll"style="color:black;"><b>Contact</b></a></li>
 							</ul>
 							<a href="#" id="pull"><img src="images/nav.jpg" title="menu" /></a>
 						</nav>
